# recch

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: check.yml  release.yml
src/: App.vue  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: db.toml
src-tauri/src/: ai_service.rs  lib.rs  main.rs
src/components/: AIConfigModal.vue  ConnectionModal.vue  DataGrid.vue  QueryConsole.vue  RedisViewer.vue  TableList.vue  TableStructure.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
src/router/: index.ts
src/utils/: tauri.ts
src/views/: Connections.vue  Manage.vue
